--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </section>
 
         <!--"what we do" section-->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
                 Butcher selfies chambrau shabby chic gentrify readymade yr Echo Park XOX Tumblr normcor Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickeled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
