--- a/index.html
+++ b/index.html
@@ -71,47 +71,85 @@
 
         <!--"what we do" section-->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
-                Butcher selfies chambrau shabby chic gentrify readymade yr Echo Park XOX Tumblr normcor Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickeled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-            </p>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    What We Do
+                </h2>
+            </div>
+            <div class="flex-row">
+                <p>
+                    Butcher selfies chambrau shabby chic gentrify readymade yr Echo Park XOX Tumblr normcor Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickeled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                </p>
+            </div>    
         </section>
 
         <!--"what you do" section-->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
-
-            <div>
-                <!--insert this img element-->
-                <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-                <p>You're already here, so why not?</p>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">
+                    What You Do 
+                </h2>
+            </div>    
+            <div class="step">
+                <h3>Step 1.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-1.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Fill Out The Form Above</h4>
+                        <p>You're already here, so why not?</p>
+                    </div>
+                </div>              
             </div>
 
-            <div>
-                <img src="./assets/images/step-2.svg" alt="" />
-                <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-                <p>Are you here to buiild muscle, lose weight, or just feel good?</p>
+            <div class="step">
+                <h3>Step 2.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-2.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Consult with One of Our Trainers</h4>
+                        <p>Are you here to buiild muscle, lose weight, or just feel good?</p>
+                    </div>
+                </div>    
             </div>
 
-            <div>
-                <img src="./assets/images/step-3.svg" />
-                <h3>Step 3: <span>Get Running.</span></h3>
-                <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+            <div class="step">
+                <h3>Step 3.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-3.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Get Running</h4>
+                        <p>Hit the ground running (literally) once your trainer lays out your plan</p>
+                    </div>
+                </div>               
             </div>
 
-            <div>
-                <img src="./assets/images/step-4.svg" />
-                <h3>Step 4: <span>See Results.</span></h3>
-                <p>Bi-weekly checkins with your trainer will keep you focused</p>
+            <div class="step">
+                <h3>Step 4.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-4.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>See Results</h4>
+                        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+                    </div>
+                </div>             
             </div>
         </section>
 
         <!--"meet the trainers"-->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">
-                Meet The Trainers
-            </h2>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">
+                    Meet The Trainers
+                </h2>
+            </div>
 
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pum,p iron"/>
@@ -152,7 +190,12 @@
 
         <!--"reach out"-->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">
+                    Reach Out
+                </h2>
+            </div>
+            
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2829.7255831848406!2d-93.10689078380535!3d44.827154883743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87f62d49d7da8f2f%3A0x231d3eac26e26daf!2s1955%20Upper%2084th%20St%20W%2C%20Inver%20Grove%20Heights%2C%20MN%2055077!5e0!3m2!1sen!2sus!4v1646346951104!5m2!1sen!2sus"
                  width="400" 
