--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
                     <h3>Contact Us</h3>
                     <form>
                         <label for="contact-name">Your Name</label>
-                        <input type="text" id="contact-name" placeholder="Your Name" />
+                        <input t-ype="text" id="contact-name" placeholder="Your Name" />
 
                         <label for="contact-message">Message</label>
-                        <textarea id="contact-message" placeholdr="Message"></textarea>
+                        <textarea id="contact-message" placeholder="Message"></textarea>
 
                         <button type="submit">Submit</button>
                     </form>
